Fix flickering/jumping scrollbars problem

--- a/static/global.css
+++ b/static/global.css
@@ -3,10 +3,15 @@
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+body {
+  overflow-y: scroll;
+}
+
 main {
   text-align: center;
   padding: 1em;
   margin: 0 auto;
+  min-height: 600px;
 }
 
 h1 {
